--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "@tailwindcss/vite": "^4.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-image-magnify": "^2.7.4",
+    "react-modal": "^3.16.3",
+    "recharts": "^3.0.2",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
